--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <!-- Dentro de href llama a un documento pdf con la poltica-->
             <a href="#">Términos y Condiciones</a>
             <!-- Dentro de href llama a un documento pdf con los terminos y condiciones-->
-            <a href="/obtenerDocumento.pdf">Protección de Datos</a>
+            <a href="doc/obtenerDocumento.pdf">Protección de Datos</a>
           </div>
 
           <!-- Redes sociales con íconos personalizados -->
