--- a/index.html
+++ b/index.html
@@ -1,246 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>EasyMoney</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="Pie.css" />
+    <title>Login con Clave Estática</title>
+    <link rel="stylesheet" href="login.css" />
   </head>
   <body>
-    <!-- Barra de navegación -->
-    <nav class="topheader">
-      <a href="#" class="logo">
-        <img
-          height="80"
-          width="100"
-          src="img/logo-easymoney.png"
-          alt="Logo EasyMoney"
-        />
-      </a>
+    <section class="login-container">
+      <div class="login-box">
+        <h2>Acceso Restringido</h2>
 
-      <ul class="menu-horizontal">
-        <li><a href="#" class="activo">Inicio</a></li>
-        <li><a href="#">Beneficios</a></li>
-
-        <li>
-          <a href="#">Monedas</a>
-          <ul class="menu-vertical">
-            <li><a href="#"> Dolares </a></li>
-            <li><a href="#"> Euros </a></li>
-            <li><a href="#"> Otros </a></li>
-          </ul>
-        </li>
-
-        <li><a href="#">Log in</a></li>
-        <li><a href="#" class="registrarse">Regístrate</a></li>
-      </ul>
-    </nav>
-
-    <!-- Imagen principal banner -->
-    <section class="hero">
-      <img
-        src="img/billetes.jpg"
-        alt="Billetes de diferentes países"
-        class="hero-img"
-      />
-      <div class="hero-texto">
-        <h2>“Tu cambio de divisas seguro, rápido y confiable”</h2>
-        <a href="#" class="boton">Comenzar</a>
-      </div>
-    </section>
-
-    <!-- Sección informativa -->
-    <section class="info">
-      <h2>¿Qué es EasyMoney?</h2>
-      <p>
-        EasyMoney es una plataforma digital que te permite realizar cambios de
-        divisas de forma rápida, segura y sin complicaciones. Nuestro objetivo
-        es ofrecerte la mejor tasa de cambio con una experiencia fácil y
-        confiable.
-      </p>
-    </section>
-
-    <!-- Sección Inversión Inteligente -->
-    <section class="seccion-inversion">
-      <div class="div-gral-inversion">
-        <div class="div-inversion-texto">
-          <h2>Inversión Inteligente</h2>
-          <p>
-            Invertir en dólares es una estrategia segura y estable para proteger
-            tu dinero frente a la inflación y la devaluación. En EasyMoney te
-            brindamos las mejores tasas para que puedas cambiar tus soles o
-            euros a dólares de manera rápida y confiable. Aprende más sobre cómo
-            hacer crecer tus ahorros con nosotros.
-          </p>
-        </div>
-
-        <div class="div-inversion-video">
-          <iframe
-            width="460"
-            height="260"
-            src="https://www.youtube.com/embed/vtfdWY8znJU?si=z1E8Nc6piJMOk6CN"
-            title="Video sobre inversión en dólares"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          >
-          </iframe>
-        </div>
-      </div>
-    </section>
-
-    <!-- Formulario -->
-    <section class="seccion-formulario">
-      <div class="div-cont-formulario">
-        <h2>Contáctanos</h2>
-        <p>Déjanos tus datos para recibir más información</p>
-
-        <form class="formulario">
-          <!--input/label-->
-          <div class="campo">
-            <label for="nombre"> Nombre completo:</label>
-            <input type="text" id="nombre" placeholder="Ingrese su nombre" />
+        <form onsubmit="return validarLogin(event);">
+          <div class="input-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="Introduce tu email"
+              required
+            />
           </div>
 
-          <!--Lista desplegable-->
-          <div class="campo">
-            <label for="pais"> País:</label>
-            <select id="pais" name="pais">
-              <option value="">Seleccione un país</option>
-              <option value="peru">Perú</option>
-              <option value="argentina">Argentina</option>
-              <option value="colombia">Colombia</option>
-            </select>
+          <div class="input-group">
+            <label for="password">Clave de Acceso (hola)</label>
+            <input
+              type="password"
+              id="password"
+              name="password"
+              placeholder="Introduce la clave secreta"
+              required
+            />
           </div>
 
-          <!--checkbox-->
-          <div class="campo">
-            <label> Intereses: </label>
-            <ul class="lista-checkbox">
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="a"
-                  />tecnoligia</label
-                >
-              </li>
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="b"
-                  />finanzas</label
-                >
-              </li>
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="c"
-                  />practicidad</label
-                >
-              </li>
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="d"
-                  />confianza</label
-                >
-              </li>
-            </ul>
-          </div>
-
-          <!--radio-->
-          <div class="campo">
-            <label> Sexo: </label>
-            <ul class="lista-radio">
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="a"
-                  />masculino</label
-                >
-              </li>
-              <li>
-                <label
-                  ><input
-                    type="checkbox"
-                    name="intereses"
-                    value="b"
-                  />fememnino</label
-                >
-              </li>
-            </ul>
-          </div>
-
-          <button type="submit" class="boton">Enviar</button>
+          <button type="submit" class="login-button">Iniciar Sesión</button>
         </form>
       </div>
     </section>
 
-    <section id="footer">
-      <footer class="footer">
-        <div class="footer-container">
-          <!-- Logo y nombre de sitio -->
-          <div class="footer-brand">
-            <img src="img/senati-logo.png" alt="Logo" class="footer-logo" />
-            <p>SENATI</p>
-            <small>© 2025 Todos los derechos reservados</small>
-          </div>
-
-          <!-- Enlaces legales -->
-          <div class="footer-links">
-            <h4>Legal</h4>
-            <a href="/Documentos/3.politica-privacidad.pdf"
-              >Política de Privacidad</a
-            >
-            <!-- Dentro de href llama a un documento pdf con la poltica-->
-            <a href="#">Términos y Condiciones</a>
-            <!-- Dentro de href llama a un documento pdf con los terminos y condiciones-->
-            <a href="doc/obtenerDocumento.pdf">Protección de Datos</a>
-          </div>
-
-          <!-- Redes sociales con íconos personalizados -->
-          <div class="footer-social">
-            <h4>Síguenos</h4>
-            <a href="#"
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/145/145802.png"
-                alt="Facebook"
-                class="social-icon"
-            /></a>
-            <a href="#"
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/145/145812.png"
-                alt="Instagram"
-                class="social-icon"
-            /></a>
-            <a href="#"
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
-                alt="LinkedIn"
-                class="social-icon"
-            /></a>
-            <a href="#"
-              ><img
-                src="https://cdn-icons-png.flaticon.com/512/145/145806.png"
-                alt="Twitter"
-                class="social-icon"
-            /></a>
-          </div>
-        </div>
-      </footer>
-    </section>
+    <script src="login.js"></script>
   </body>
 </html>
